2004-01-18  Jason Leach  <leach@wam.umd.edu>

	* schemas/Makefile.am (install-data-local): builddir != srcdir fix.

2004-01-15  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnome/gnome-config.h: Merge fix for bug #129744.

2004-01-14  Anders Carlsson  <andersca@gnome.org>

	* configure.in: Release 2.5.3

2003-12-28  Anders Carlsson  <andersca@gnome.org>

	* configure.in: Release 2.5.2

2003-12-08  Anders Carlsson  <andersca@gnome.org>

	* configure.in: Release 2.5.1

2003-12-05  Mark McLoughlin  <mark@skynet.ie>

	* schemas/Makefile.am,
	  schemas/desktop_gnome_url_handlers.schemas.in:
	Remove the url_hanlders schemas. They've been moved
	to gnome-vfs.

2003-11-24  Anders Carlsson  <andersca@gnome.org>

	* configure.in: Release 2.5.0

2003-10-27   Mark Finlay <sisobATtuxfamilyDOTorg>

	* schemas/desktop_gnome_background.schemas.in:
	Change default background color.

2003-09-23  Hidetoshi Tajima  <hidetoshi.tajima@sun.com>

	* libgnome/gnome-init.c: make --help work with popt-1.7.
	Fix bug 123052.

2003-09-01  Anders Carlsson  <andersca@gnome.org>

	* configure.in: Release 2.4.0

	* schemas/Makefile.am (schema_in_files): Ship
	.schemas in tarball since that's what everyone else is doing.

li2003-09-01  Laurent Dhima  <laurenti@alblinux.net>

	* configure.in: Added "sq" to ALL_LINGUAS.
	
2003-08-26  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* schemas/Makefile.am:
	Ship .schemas.in in tarball, not .schemas.

2003-08-25  Anders Carlsson  <andersca@gnome.org>

	* configure.in: Release 2.3.7

2003-08-25  Alexander Larsson  <alexl@redhat.com>

	* schemas/desktop_gnome_url_handlers.schemas.in:
	Add http url handlers.

2003-08-17  Paisa Seeluangsawat  <paisa@users.sf.net>

        * configure.in: Added Thai (th) to ALL_LINGUAS.

2003-08-11  Anders Carlsson  <andersca@codefactory.se>

	* configure.in: Release 2.3.6

2003-07-23  Gustavo J. A. M. Carneiro  <gustavo@users.sourceforge.net>

	* libgnome/gnome-program.c (gnome_program_initv): Don't create new