@@ -1,3 +1,10 @@
+2004-01-21  Anders Carlsson  <andersca@gnome.org>
+
+	* libgnome/gnome-init.c: (libgnome_module_info_get):
+	* libgnome/gnome-program.c: (gnome_program_parse_args):
+	Fix translation of program arguments. 
+	(#106549, patch by Hidetoshi Tajima).
+	
 2004-01-18  Jason Leach  <leach@wam.umd.edu>
 
 	* schemas/Makefile.am (install-data-local): builddir != srcdir fix.
